Adding READMEs and the Logic App creation docs

--- a/notebook_test_results.html
+++ b/notebook_test_results.html
@@ -20,10 +20,10 @@
     <div class="summary">
         <h2>Summary</h2>
         <p><strong>Total notebooks:</strong> 14</p>
-        <p><strong>Successful:</strong> <span class="success">9</span></p>
-        <p><strong>Failed:</strong> <span class="failed">4</span></p>
-        <p><strong>Errors:</strong> <span class="error">1</span></p>
-        <p><strong>Total execution time:</strong> 2949.79 seconds</p>
+        <p><strong>Successful:</strong> <span class="success">12</span></p>
+        <p><strong>Failed:</strong> <span class="failed">0</span></p>
+        <p><strong>Errors:</strong> <span class="error">2</span></p>
+        <p><strong>Total execution time:</strong> 3410.58 seconds</p>
         <p><strong>Overall status:</strong> FAILED</p>
     </div>
     
@@ -39,18 +39,16 @@
 
         <tr>
             <td>01-agent-basics\01.1-azure_ai_agents_foundry_sdk_tutorial.ipynb</td>
-            <td class="failed">failed</td>
-            <td>45.46</td>
-            <td>0/13</td>
-            <td>An error occurred while executing the following cell:
-------------------
-# 🎯 YOUR TURN! Customize th...</td>
+            <td class="success">success</td>
+            <td>37.42</td>
+            <td>12/12</td>
+            <td></td>
         </tr>
 
         <tr>
             <td>01-agent-basics\01.2-azure_ai_agents_semantic_kernel_tutorial.ipynb</td>
             <td class="success">success</td>
-            <td>136.73</td>
+            <td>136.17</td>
             <td>17/17</td>
             <td></td>
         </tr>
@@ -58,7 +56,7 @@
         <tr>
             <td>01-agent-basics\01.3-python_with_statement_agents_tutorial.ipynb</td>
             <td class="success">success</td>
-            <td>106.1</td>
+            <td>110.71</td>
             <td>7/7</td>
             <td></td>
         </tr>
@@ -66,7 +64,7 @@
         <tr>
             <td>02-agent-custom-functions\02.1-azure_ai_agents_functions_foundry_sdk_tutorial.ipynb</td>
             <td class="success">success</td>
-            <td>52.19</td>
+            <td>47.46</td>
             <td>14/14</td>
             <td></td>
         </tr>
@@ -74,7 +72,7 @@
         <tr>
             <td>02-agent-custom-functions\02.2-azure_ai_agents_semantic_kernel_plugins_tutorial.ipynb</td>
             <td class="success">success</td>
-            <td>66.12</td>
+            <td>75.42</td>
             <td>9/9</td>
             <td></td>
         </tr>
@@ -82,7 +80,7 @@
         <tr>
             <td>03-orchestrated-agents\03.1-concurrent_and_sequential_orchestration_tutorial.ipynb</td>
             <td class="error">error</td>
-            <td>1324.63</td>
+            <td>1336.55</td>
             <td>0/9</td>
             <td>A cell timed out while it was being executed, after 600 seconds.
 The message was: Cell execution tim...</td>
@@ -90,18 +88,16 @@ The message was: Cell execution tim...</td>
 
         <tr>
             <td>03-orchestrated-agents\03.2-connected_agents_tutorial.ipynb</td>
-            <td class="failed">failed</td>
-            <td>108.55</td>
-            <td>0/10</td>
-            <td>An error occurred while executing the following cell:
-------------------
-# Final cleanup - delete th...</td>
+            <td class="success">success</td>
+            <td>121.02</td>
+            <td>10/10</td>
+            <td></td>
         </tr>
 
         <tr>
             <td>04-orchestrated-agents-with-tools\04.1-openapi_currency_exchange_tutorial.ipynb</td>
             <td class="success">success</td>
-            <td>75.28</td>
+            <td>81.14</td>
             <td>10/10</td>
             <td></td>
         </tr>
@@ -109,51 +105,48 @@ The message was: Cell execution tim...</td>
         <tr>
             <td>04-orchestrated-agents-with-tools\04.2-hybrid_openapi_and_plugins_tutorial.ipynb</td>
             <td class="success">success</td>
-            <td>109.39</td>
+            <td>101.49</td>
             <td>9/9</td>
             <td></td>
         </tr>
 
         <tr>
             <td>04-orchestrated-agents-with-tools\04.3-logic_apps_hybrid_tutorial.ipynb</td>
-            <td class="failed">failed</td>
-            <td>23.33</td>
-            <td>0/12</td>
-            <td>An error occurred while executing the following cell:
-------------------
-# Test the Logic Apps agent...</td>
+            <td class="success">success</td>
+            <td>62.08</td>
+            <td>12/12</td>
+            <td></td>
         </tr>
 
         <tr>
             <td>05-orchestrated-agents-with-custom-openapi-tools\05.1-fastapi_openapi_tutorial.ipynb</td>
-            <td class="failed">failed</td>
-            <td>10.22</td>
-            <td>0/6</td>
-            <td>An error occurred while executing the following cell:
-------------------
-# Start the FastAPI service...</td>
+            <td class="success">success</td>
+            <td>83.15</td>
+            <td>6/6</td>
+            <td></td>
         </tr>
 
         <tr>
             <td>06-magentic-one-orchestration\06.1-magentic_creative_writing_tutorial.ipynb</td>
             <td class="success">success</td>
-            <td>317.29</td>
+            <td>519.76</td>
             <td>12/12</td>
             <td></td>
         </tr>
 
         <tr>
             <td>06-magentic-one-orchestration\06.2-magentic_bing_search_orchestration_tutorial.ipynb</td>
-            <td class="success">success</td>
-            <td>495.52</td>
-            <td>7/7</td>
-            <td></td>
+            <td class="error">error</td>
+            <td>615.61</td>
+            <td>0/7</td>
+            <td>A cell timed out while it was being executed, after 600 seconds.
+The message was: Cell execution tim...</td>
         </tr>
 
         <tr>
             <td>xtest.ipynb</td>
             <td class="success">success</td>
-            <td>78.98</td>
+            <td>82.6</td>
             <td>12/13</td>
             <td></td>
         </tr>
